src/test/deca/context/valid/wobj/test_condition_true.deca
// Description:
//    programme avec condition.
//
// Resultats:
//    valid
//
// Historique:
//    cree le 01/01/2024

{
boolean state = true;
if(state){
    print("valid");
}
}
