src/test/deca/context/invalid/test_print_bool.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12 : Type non accepté par Print.
// 
// Historique:
//    cree le 01/01/2024

{
   boolean b = true;
   print(b);
}
